--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>PDL L3 - Galerie</title>
+		<title>PDL L3 - Projet</title>
 	</head>
 
 	<body>
